{
    "name": "BirdControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6151e214-0e94-499c-b6d4-aae4c427bcdd",
            "actions": [
                {
                    "name": "Pad",
                    "type": "Value",
                    "id": "a423e09c-b9f4-484a-bbf0-91bda5d5261e",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "aafe548c-b936-4138-92b5-5b64225bd06c",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "293a7b78-0862-4967-8bf1-3837df412551",
                    "expectedControlType": "Stick",
                    "processors": "InvertVector2",
                    "interactions": ""
                },
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "f69db7e0-f0c5-41a3-b0f3-d63877c0a132",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Decelerate",
                    "type": "Button",
                    "id": "031d4e1b-5d61-4d5c-91d7-056ed9a8487b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7e834b0-6896-413d-8317-b57b13e54c75",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccf39389-6a75-4d84-a80d-0fd41dc12709",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cc09ac8-905b-4074-bd66-f8c61715caef",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef3d6eec-5e88-447d-8fbe-f787b4ff836f",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22ae7eac-0c39-4972-98f2-3fd5c48e2fb5",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Decelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}